--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
     "sass": "^1.86.0",
-    "vite": "4.4.5"
+    "vite": "4.4.5",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
