--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "0.4.3",
     "sass": "^1.86.0",
     "vite": "4.4.5",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
