--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "three": "^0.171.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.26.10",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@vitejs/plugin-react": "4.0.3",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint": "8.45.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
